# gitc

./: .gitignore  Cargo.toml
src/: args.rs  byteable.rs  constants.rs  error.rs  fs.rs  gitignore.rs  hashing.rs  main.rs  object.rs
src/commands/: add.rs  cat_file.rs  checkout.rs  commit.rs  init.rs  ls_files.rs  mod.rs  reset.rs  status.rs
src/commands/status/: format.rs  mod.rs  read.rs  status.rs
src/fs/: index.rs  mod.rs  object.rs  path.rs  repo.rs
src/index/: builder.rs  extension_entry.rs  file_stage.rs  index.rs  index_entry.rs  mod.rs
src/object/: blob.rs  commit.rs  mod.rs  object.rs  object_type.rs  tree.rs
src/object/commit/: commit.rs  commit_user.rs  mod.rs
src/object/tree/: builder.rs  mod.rs  tree.rs  utils.rs
src/utils/: cursor.rs  mod.rs  nums.rs  path.rs  zlib.rs
