[package]
name = "git-clone"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
flate2 = "1.1.2"
hex = "0.4.3"
sha1 = "0.10.6"
time = { version = "0.3.41", default-features = false }
time-tz = "2.0.0"

